@@ -1,9 +1,8 @@
 package de.tum.in.www1.artemis.util;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.http.NameValuePair;
 
@@ -11,47 +10,48 @@ public class TestUriParamsUtil {
 
     /**
      * Asserts if a list of URI parameters contains an entry pair with the given name and value
+     *
      * @param uriParams the list of URI parameters
-     * @param name the name of the URI parameter
-     * @param value the value of the URI parameter
+     * @param name      the name of the URI parameter
+     * @param value     the value of the URI parameter
      */
     public static void assertUriParamsContain(List<NameValuePair> uriParams, String name, String value) {
         assertUriParamsContain(uriParams, name, value, false);
     }
 
     /**
-     * Asserts if a list of URI parameters contains an entry pair with the given name and value. If specified the
+     * Asserts if a list of URI parameters contains an entry pair with the given name and value. If specified, the
      * assert does not fail if the given value is a substring of the actual URI parameter value.
-     * @param uriParams the list of URI parameters
-     * @param name the name of the URI parameter
-     * @param value the value of the URI parameter
-     * @param allowValueSubString whether or not to allow that the given value is a sub string of the actual value
+     *
+     * @param uriParams           the list of URI parameters
+     * @param name                the name of the URI parameter
+     * @param value               the value of the URI parameter
+     * @param allowValueSubString whether to allow that the given value is a sub string of the actual value
      */
     public static void assertUriParamsContain(List<NameValuePair> uriParams, String name, String value, boolean allowValueSubString) {
-        List<NameValuePair> matching = uriParams.stream().filter(param -> param.getName().equals(name)).collect(Collectors.toList());
-        if (matching.isEmpty()) {
-            fail("No URI param with name '" + name + "'");
-        }
-        if (matching.size() > 1) {
-            fail("Multiple URI param with name '" + name + "'");
-        }
+        List<NameValuePair> matching = uriParams.stream().filter(param -> param.getName().equals(name)).toList();
+
+        assertThat(matching).as("No URI param with name '" + name + "'").isNotEmpty();
+        assertThat(matching).as("Multiple URI param with name '" + name + "'").hasSizeLessThanOrEqualTo(1);
+
         NameValuePair param = matching.get(0);
 
         if (allowValueSubString) {
-            assertTrue(param.getValue().contains(value),
-                    "Invalid value for URI param with name '" + name + "': Actual value '" + param.getValue() + "' does not contain expected '" + value + "'");
+            assertThat(param.getValue())
+                    .as("Invalid value for URI param with name '" + name + "': Actual value '" + param.getValue() + "' does not contain expected '" + value + "'").contains(value);
             return;
         }
-        assertEquals(value, param.getValue(), "Invalid value for URI param with name '" + name + "'");
+        assertThat(param.getValue()).as("Invalid value for URI param with name '" + name + "'").isEqualTo(value);
     }
 
     /**
      * Asserts if a list of URI parameters contains an entry pair with the given name regardless of its value
+     *
      * @param uriParams the list of URI parameters
-     * @param name the name of the URI parameter
+     * @param name      the name of the URI parameter
      */
     public static void assertUriParamsContain(List<NameValuePair> uriParams, String name) {
-        assertEquals(1L, uriParams.stream().filter(param -> param.getName().equals(name)).count(), "No URI param with name '" + name + "'");
+        assertThat(uriParams).filteredOn(param -> param.getName().equals(name)).as("No URI param with name '" + name + "'").hasSize(1);
     }
 
 }
